# rtkprog

./: .gitignore  README.md  pyproject.toml  requirements.txt  rtkprog.py
.github/workflows/: build_and_publish.yml
rtkprog/: __init__.py  args.py  bluetooth_mac.py  cli.py  com_interface_bootloader.py  com_interface_firmware_loader.py  exceptions.py  hci.py  logging.py  serial.py  validation.py
rtkprog/chips/: __init__.py  base.py  rtl8752h.py  rtl8762c.py  rtl8762g.py
