# SPDX-FileCopyrightText: 2026 A Labs GmbH
# SPDX-License-Identifier: Apache-2.0

[project]
name = "rtkprog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crccheck>=1.3.1",
    "pyserial>=3.5",
]

[project.scripts]
rtkprog = "rtk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
